...
export function gqlOrderToPOS(o: GqlOrder): POSOrder {
  return {
    id:            o._id,
    merchantId:    o.uid,
    branchId:      o.branchId,
    staffId:       "",
    orderSource:   "POS" as const,
    status:        beStatusToFE(o.laundryStatus),
    walkinCustomer: {
      name:    o.customerName,
      phone:   o.customerPhone,
      address: o.customerAddress,
    },
...
